# fleet-murmur

./: .gitignore  CREDENTIALS.md  CROSS-POLLINATE.md  CROSS-REFERENCES.md  HEARTBEAT.md  MEMORY.md  NEXT-ACTION.md  NIGHT-WATCH-2.md  README.md  STATUS.md  TODO.md  pyproject.toml  search-index.json  test_ifdef3.beam
.clawhub/: lock.json
artifacts/arm-neon-benchmarks/: constraint_bench.py  fortran_results.txt  python_results.txt  rust_results.txt
artifacts/index/: catalog.json
data/: embedded-fleet-data.json  fleet-categorization.json  fleet-data-section.txt
data/crab-trap/: agent-registry.jsonl
data/keeper/: fleet.json
data/mud/: world.json
data/rate-attention/: rates.jsonl
data/recursive-grammar/: evolution.jsonl
docs/: fleet-index.html
fleet/services/: aesop_mcp.py  crab_trap.py  disc_golf_game.py  disc_golf_web.py  dodecet_bridge.py  forest-view.html  keeper.py  (+2 more)
memory/: 2026-05-02.md  2026-05-03-paper-research-index.md  2026-05-03-request-timed-out-before-a-res.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  heartbeat-state.json  playtest-results-2026-05-03.md
quartermaster_gc/: gc.py
scripts/: acp-bridge.py  ambient-briefing.py  ambient_loop.py  ccc-launcher.py  ccc-launcher2.py  cfp-agent.py  cfp.py  dependency-scanner.py  field_cli.py  fleet-ambient-briefing.py  fleet-gc.py  fleet-watchdog.py  minimax_swarm.py  night-watch.py  plato-flux-bridge.py  plato-pipeline-setup.sh  plato-pipeline.py  tension-loop.py
tests/: test_common_space.py
(+9 files in other folders)
