[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "field-cli"
version = "0.1.0"
description = "Continuous constraint field CLI — embed, read, propagate, and detect topology changes"
authors = [{ name = "SuperInstance" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["constraint", "field", "fleet", "consensus", "emergence"]

[project.scripts]
field = "field_cli:main"

[project.urls]
Source = "https://github.com/SuperInstance/fleet-murmur"

[tool.setuptools]
py-modules = ["field_cli"]
